# gl-frame-bender

./: .gitignore  CMakeLists.txt  COPYING  README.md
gl-frame-bender/: CMakeLists.txt  main.cpp
gl-frame-bender-tests/: CMakeLists.txt  CircularQueueTests.cpp  GLHelperTests.cpp  PipelineTests.cpp  PrecompileTest.cpp  PrecompileTest.h  RenderTests.cpp  StreamSourceTests.cpp  TestCommon.cpp  TestCommon.h  TestMain.cpp  TestUtils.h
glsl/: common.glsl  overlay.frag  overlay.vert  passthrough.frag  passthrough.vert  passthrough_integer.frag  v210_decode_constants.glsl  v210_decode_glsl_330.frag  v210_decode_glsl_420.frag  v210_decode_glsl_430.glsl  v210_decode_glsl_430_no_shared.glsl  v210_decode_ycbcr_lookup.glsl  v210_decode_ycbcr_to_rgb_and_store.glsl  v210_encode_constants.glsl  v210_encode_glsl_330.frag  v210_encode_glsl_420.frag  v210_encode_glsl_430.glsl  v210_encode_glsl_430_no_shared.glsl  v210_encode_lookup_and_rgba_to_ycbcr.glsl  v210_encode_subsample_ycbcr_pack_and_store.glsl
ide/vs2013/: FrameBender.sln
ide/vs2013/ConvertYUV10ToV210/: ConvertYUV10ToV210.vcxproj  ConvertYUV10ToV210.vcxproj.filters
ide/vs2013/FrameBender/: FrameBender.vcxproj  FrameBender.vcxproj.filters
ide/vs2013/FrameBenderTests/: FrameBenderTests.vcxproj  FrameBenderTests.vcxproj.filters
ide/vs2013/V210FrameComparison/: V210FrameComparison.vcxproj  V210FrameComparison.vcxproj.filters
ide/vs2013/libFrameBender/: libFrameBender.vcxproj  libFrameBender.vcxproj.filters
lib/: ByPassDownloadStage.h  ByPassUploadStage.cpp  ByPassUploadStage.h  CMakeLists.txt  ChronoUtils.h  CircularFifo.h  CircularFifoHelpers.h  Context.cpp  Context.h  CopyHostToMappedPBOStage.cpp  CopyHostToMappedPBOStage.h  CopyHostToMappedPBOStage.h.rej  CopyMappedPBOToHostStage.cpp  CopyMappedPBOToHostStage.h  DemoStreamRenderer.cpp  DemoStreamRenderer.h  FormatConverterStage.cpp  FormatConverterStage.h  FormatOptions.h  Frame.cpp  Frame.h  FrameBender.h  FrameCompositionInputStage.cpp  FrameCompositionInputStage.h  FrameCompositionOutputStage.cpp  FrameCompositionOutputStage.h  FrameTime.h  ImageFormat.cpp  ImageFormat.h  Init.cpp  Init.h  Logging.cpp  Logging.h  MapPBOStage.cpp  MapPBOStage.h  MathConstants.h  PackTextureToPBOStage.cpp  PackTextureToPBOStage.h  PipelineStage.h  Precompile.cpp  (+38 more)
lib/protobuf_generated/: fbt_format.pb.cc  fbt_format.pb.h
resources/: DualCopyEnginesPreset.cfg  FrameBenderTest.cfg  PlayerPreset.cfg  SimpleBenchmarkPreset.cfg  benchmark_master.cfg  fbt_format.proto
scripts/: add_ms_per_frame.py  create_summary_table.py  fbt_format_pb2.py  fixup_mebibytes_to_megabytes.py  force_merge_stages.py  render_quality_scenarios.py  run_analysis.py  trace_muncher.py
utils/: CMakeLists.txt  ConvertYUV10ToV210.cpp  V210FrameComparison.cpp
